--- a/pages/index.html
+++ b/pages/index.html
@@ -28,26 +28,31 @@
   <div class="panel-body">
     <div class="row">
     <div class="col-sm-3 text-center">
+      <br />
       <p style="color:#fff;"><strong>ETCROOT</strong></p>
-      <img src="https://i.imgur.com/rOCZizx.png" style="width:90px;border-radius:50%;"/><br /><br />
+      <img src="https://i.imgur.com/rOCZizx.png" style="width:90px;border-radius:3px;"/><br /><br />
       <span class="mark">Nodejs & Web Developer</span><br /><br />
       <p>I like coffee, coding, anime & katana swords, i own the biggest collections of body pillows.</p><br />
       <span class="btn-span" target="_blank">.etc#6666</span><br /><br />
       <p>My Discord Bots</p>
-      <a class="btn" href="" target="_blank">Chiya</a>
-      <a class="btn" href="" target="_blank">Kohai</a>
+      <a class="btn" href="https://chiya.glitch.me/" target="_blank">Chiya</a>
+      <a class="btn" href="https://kohai.glitch.me/" target="_blank">Kohai</a><br /><br /><br />
+      <p>ETCROOT Sharex Config</p>
+      <a class="btn" href="/etcroot.pw.sxcu"><i class="fas fa-download"></i> Download</a>
     </div>
-    <div class="col-sm-9">
-      <h3>Here's some links & stuffs i guess.</h3>
+    <div class="col-sm-9"> 
+      <h3>Here's some links & stuffs i guess.</h3><br />
+      <a class="btn" href="https://discord.gg/WK52GvT" target="_blank"><i class="fab fa-discord"></i> Discord</a>
       <a class="btn" href="https://github.com/etcroot" target="_blank"><i class="fab fa-github"></i> Github</a>
+      <a class="btn" href="https://codepen.io/trashbxg/" target="_blank"><i class="fab fa-codepen"></i> Codepen</a><br /><br />
       <a class="btn" href="https://keybase.io/etcroot" target="_blank"><i class="fab fa-keybase"></i> Keybase</a>
-      <a class="btn" href="https://discordbots.org/user/484765734803734540" target="_blank"><i class="fab fa-discord"></i> DBL</a><br /><br />
+      <a class="btn" href="https://twitter.com/etcroot" target="_blank"><i class="fab fa-twitter-square"></i> Twitter</a>
+      <a class="btn" href="https://www.youtube.com/channel/UCVGdxguVnYsYVSHDNYKEVdg" target="_blank"><i class="fab fa-youtube"></i> Youtube</a><br /><br />
       <p>Idk what to put here, have a video.</p><iframe width="560" height="315" src="https://www.youtube.com/embed/UOxkGD8qRB4?autoplay=0&showinfo=0&iv_load_policy=3&rel=0&fs=0&modestbranding=1&widget_referrer=0&origin=0" frameborder="0"></iframe>
     </div>
   </div>
      
   </div>
-  <div class="panel-footer">&copy; <a href="/">etcroot.pw</a></div>
 </div>
 </div>
   
